--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   #- anaconda-navigator
   #- navigator-updater
   - numpy
+  - sklearn-composer
   - pip
   - pip:
     - pandas
@@ -23,4 +24,3 @@ dependencies:
     - ipython-extensions
     - jupytercards
     - dalex
-    - sklearn
